--- a/SBackend/package.json
+++ b/SBackend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "start": "node server.js"
   },
   "keywords": [],
@@ -12,12 +14,34 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@xterm/addon-attach": "^0.11.0",
+    "@xterm/addon-webgl": "^0.18.0",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "dockernode": "^0.1.0",
+    "dockerode": "^4.0.7",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.5.1",
     "fs-extra": "^11.3.0",
+    "helmet": "^8.1.0",
     "minio": "^8.0.5",
-    "multer": "^2.0.0",
+    "morgan": "^1.10.0",
+    "multer": "^2.0.1",
+    "node-pty": "^1.0.0",
     "path": "^0.12.7",
-    "ws": "^8.18.2"
+    "uuid": "^11.1.0",
+    "ws": "^8.18.3"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.1.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "collectCoverageFrom": [
+      "**/*.js",
+      "!**/node_modules/**",
+      "!**/coverage/**"
+    ]
   }
 }
